---
source: crates/jinja/minijinja/tests/test_parser.rs
description: "{% if expr1 %}\n    branch 1\n{% endif %}"
input_file: crates/jinja/minijinja/tests/parser-inputs/if_cond_simple.txt
snapshot_kind: text
---
Ok(
    Template {
        children: [
            IfCond {
                expr: Var {
                    id: "expr1",
                } @ 1:7-1:12,
                true_body: [
                    EmitRaw {
                        raw: "\n    branch 1\n",
                    } @ 1:15-3:1,
                ],
                false_body: [],
            } @ 1:1-3:12,
        ],
    } @ 0:0-3:12,
)
